welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: unclosed character literal
        ecritMessage('compteur')
                              ^ColumnByColumn:11: error: ')' expected but something found.
        ecritMessage('compteur')
                              ^